# swiss-food-safety-mcp

./: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  pyproject.toml  server.py  test_server.py
.github/workflows/: ci.yml  publish.yml
src/swiss_food_safety_mcp/: __init__.py  server.py
tests/: test_server.py
