[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-food-safety-mcp"
version = "1.0.0"
description = "MCP Server for Swiss Federal Food Safety and Veterinary Office (BLV) open data"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "malkreide", email = "malkreide@users.noreply.github.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "blv",
    "food-safety",
    "swiss-open-data",
    "lebensmittelsicherheit",
    "veterinary",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
swiss-food-safety-mcp = "swiss_food_safety_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-food-safety-mcp"
Repository = "https://github.com/malkreide/swiss-food-safety-mcp"
Issues = "https://github.com/malkreide/swiss-food-safety-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_food_safety_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
