[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-food-safety-mcp"
version = "1.0.0"
description = "MCP Server for Swiss Federal Food Safety and Veterinary Office (BLV) open data — no auth required"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "malkreide", url = "https://github.com/malkreide" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "swiss-open-data",
    "food-safety",
    "blv",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "httpx",
]

[project.scripts]
swiss-food-safety-mcp = "swiss_food_safety_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-food-safety-mcp"
Repository = "https://github.com/malkreide/swiss-food-safety-mcp"
Issues = "https://github.com/malkreide/swiss-food-safety-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_food_safety_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
